# wasi-usb-benchmarks

./: README.md  analyse.py  combined_graphs.ipynb  filesize.txt  pyproject.toml
artifacts/: raw_benchmark_report_aarch64_native.csv  raw_benchmark_report_windows_wasm.csv  raw_benchmark_report_x86_native.csv  raw_benchmark_report_x86_wasm.csv
artifacts-bulk/: latencies_in_ms_aarch64_native_4bytes.txt  latencies_in_ms_aarch64_wasm_16bytes.txt  latencies_in_ms_aarch64_wasm_32bytes.txt  latencies_in_ms_aarch64_wasm_4bytes.txt  latencies_in_ms_native_16bytes.txt  latencies_in_ms_wasm_4bytes.txt  latencies_in_ms_windows_native_4bytes.txt  latencies_in_ms_windows_wasm_16bytes.txt  latencies_in_ms_windows_wasm_32bytes.txt
artifacts-interrupt/: latencies_in_ms_aarch64_native_16bytes.txt  latencies_in_ms_aarch64_native_4bytes.txt  latencies_in_ms_aarch64_wasm_16bytes.txt  latencies_in_ms_aarch64_wasm_32bytes.txt  latencies_in_ms_aarch64_wasm_4bytes.txt  latencies_in_ms_native_16bytes.txt  latencies_in_ms_native_4bytes.txt  latencies_in_ms_windows_native_16bytes.txt  latencies_in_ms_windows_wasm_16bytes.txt  latencies_in_ms_windows_wasm_4bytes.txt
artifacts-isochronous/: latencies_in_ms_aarch64_native_16bytes.txt  latencies_in_ms_aarch64_wasm_4bytes.txt  latencies_in_ms_native_16bytes.txt  latencies_in_ms_native_32bytes.txt  latencies_in_ms_native_4bytes.txt  latencies_in_ms_wasm_16bytes.txt  latencies_in_ms_wasm_4bytes.txt  latencies_in_ms_windows_native_32bytes.txt  latencies_in_ms_windows_wasm_4bytes.txt
mass-storage/: analyse.py  data-pi-native.csv  data-pi-wasm.csv  (+4 more)
(+27 files in other folders)
